@@ -3,7 +3,10 @@ This is my image viewer.
 
 PLATFORMS
 Primary taregt is Windows 7 64bit, should theoretically compile on XP, haven't tried.
+On Windows I compile with MinGW64 / GCC 8.1.0 / POSIX threads.
+
 Linux (Debian stretch) support is planned.
+On Debian I compile with GCC 8.1.0.
 
 DEPENDENCIES
 FreeGLUT (bundled, not working under Linux atm, to be removed).
