@@ -36,8 +36,8 @@
         <rebuildPropChanged>false</rebuildPropChanged>
       </toolsSet>
       <flagsDictionary>
-        <element flagsID="0" commonFlags="-std=c++11 -Wpedantic"/>
-        <element flagsID="1" commonFlags="-std=c++14"/>
+        <element flagsID="0" commonFlags="-std=c++14"/>
+        <element flagsID="1" commonFlags="-std=c++98 -march=native"/>
       </flagsDictionary>
       <codeAssistance>
         <includeAdditional>true</includeAdditional>
@@ -68,31 +68,31 @@
         </ccTool>
       </folder>
       <item path="inc/wx/arrimpl.cpp" ex="false" tool="1" flavor2="11">
-        <ccTool flags="1">
+        <ccTool flags="0">
         </ccTool>
       </item>
       <item path="inc/wx/listimpl.cpp" ex="false" tool="1" flavor2="11">
-        <ccTool flags="1">
+        <ccTool flags="0">
         </ccTool>
       </item>
       <item path="inc/wx/thrimpl.cpp" ex="false" tool="1" flavor2="11">
+        <ccTool flags="0">
+        </ccTool>
+      </item>
+      <item path="src/Main.cpp" ex="false" tool="1" flavor2="4">
         <ccTool flags="1">
         </ccTool>
       </item>
-      <item path="src/Main.cpp" ex="false" tool="1" flavor2="8">
-        <ccTool flags="0">
+      <item path="src/WXCanvas.cpp" ex="false" tool="1" flavor2="4">
+        <ccTool flags="1">
         </ccTool>
       </item>
-      <item path="src/WXCanvas.cpp" ex="false" tool="1" flavor2="8">
-        <ccTool flags="0">
+      <item path="src/WXImage.cpp" ex="false" tool="1" flavor2="4">
+        <ccTool flags="1">
         </ccTool>
       </item>
-      <item path="src/WXImage.cpp" ex="false" tool="1" flavor2="8">
-        <ccTool flags="0">
-        </ccTool>
-      </item>
-      <item path="src/WXWindow.cpp" ex="false" tool="1" flavor2="8">
-        <ccTool flags="0">
+      <item path="src/WXWindow.cpp" ex="false" tool="1" flavor2="4">
+        <ccTool flags="1">
         </ccTool>
       </item>
     </conf>
